--- a/src/components/ResultList/ResultList.css
+++ b/src/components/ResultList/ResultList.css
@@ -7,10 +7,9 @@
 
 .contents-results{
     min-height: 100%;
-    min-width: 100%;
+    max-width: 100%;
     max-height: max-content;
-    min-width: max-content;
+    overflow: auto;
     background-color: white;
-    border-radius: 20px;
     padding: 50px 0px 0px 20px;
 }
